Fix pulldown wrapper border clipping after animation

--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -115,6 +115,7 @@
 	position: relative;
 	height: 100%;
 	width: 100%;
+	box-sizing: border-box;
 	display: flex;
 	flex-direction: column;
 	overflow: hidden;
